Blissify : add drawables and categorize
Change-Id: I2bf3a90c6dcf9eec6bed197f8c84162ef1e963cc

--- a/res/xml/blissify_misc.xml
+++ b/res/xml/blissify_misc.xml
@@ -17,6 +17,16 @@
     android:key="misc_settings"
     android:title="@string/blissify_misc_title">
 
+    <SwitchPreference
+        android:key="fingerprint_success_vib"
+        android:title="@string/fprint_sucess_vib_title"
+        android:summary="@string/fprint_sucess_vib_summary"
+        android:persistent="false" />
+
+    <PreferenceCategory
+        android:key="rounded_corners_category"
+        android:title="@string/corners_title" >
+
     <!-- Rounded Corners -->
     <PreferenceScreen
         android:key="rounded_corners"
@@ -24,11 +34,11 @@
         android:summary="@string/corners_summary"
         android:fragment="com.blissroms.blissify.fragments.misc.RoundedCorners" />
 
-    <SwitchPreference
-        android:key="fingerprint_success_vib"
-        android:title="@string/fprint_sucess_vib_title"
-        android:summary="@string/fprint_sucess_vib_summary"
-        android:persistent="false" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="dashboard_settings_category"
+        android:title="@string/dashboard_settings_category" >
 
     <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="enable_suggestions"
@@ -44,6 +54,12 @@
         android:summaryOff="@string/summary_dashboard_conditions_disabled"
         android:defaultValue="true" />
 
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="cpu_info"
+        android:title="@string/cpu_info">
+
     <!-- Show CPU Info overlay -->
     <SwitchPreference
         android:key="show_cpu_info"
@@ -51,11 +67,19 @@
         android:summary="@string/show_cpu_info_summary"
         android:defaultValue="false" />
 
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="toast"
+        android:title="@string/toast">
+
     <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="toast_icon" 
         android:title="@string/toast_icon_title" 
         android:summary="@string/toast_icon_summary" 
         android:defaultValue="true" />
+
+    </PreferenceCategory>
 
     <PreferenceCategory
         android:key="notification_messages"
@@ -69,11 +93,16 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:key="smart_pixels"
+        android:title="@string/smart_pixels">
+
     <com.bliss.support.preferences.SystemSettingMasterSwitchPreference
         android:key="smart_pixels_enable"
         android:fragment="com.blissroms.blissify.fragments.misc.SmartPixels"
         android:title="@string/smart_pixels_title"
         android:summary="@string/smart_pixels_summary"
         android:defaultValue="false" />
+    </PreferenceCategory>
 
 </PreferenceScreen>
