--- a/res/xml/blissify_buttons.xml
+++ b/res/xml/blissify_buttons.xml
@@ -34,6 +34,7 @@
 
     <com.blissroms.blissify.fragments.buttons.ButtonBacklightBrightness
         android:key="button_backlight"
+        android:icon="@drawable/ic_backlight"
         android:title="@string/button_backlight_title"
         android:dialogTitle="@string/button_backlight_title"
         android:persistent="false" />
@@ -85,23 +86,27 @@
 
     <lineageos.preference.LineageSecureSettingSwitchPreference
         android:key="advanced_reboot"
+            android:icon="@drawable/ic_restart"
         android:title="@string/advanced_reboot_title"
         android:summary="@string/advanced_reboot_summary"
         android:defaultValue="false" />
 
         <PreferenceScreen
             android:key="power_menu"
+            android:icon="@drawable/ic_power"
             android:title="@string/power_menu_title"
             android:fragment="com.blissroms.blissify.fragments.buttons.PowerMenuActions" />
 
         <SwitchPreference
             android:key="power_end_call"
+            android:icon="@drawable/ic_call_options"
             android:title="@string/power_end_call_title"
             android:summary="@string/power_end_call_summary"
             android:persistent="false"/>
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="torch_long_press_power_gesture"
+            android:icon="@drawable/ic_flashlight"
             android:title="@string/torch_long_press_power_gesture_title"
             android:summary="@string/torch_long_press_power_gesture_desc"
             android:defaultValue="false"
@@ -109,6 +114,7 @@
 
         <ListPreference
             android:key="torch_long_press_power_timeout"
+            android:icon="@drawable/ic_flashlight"
             android:dialogTitle="@string/torch_long_press_power_timeout_title"
             android:title="@string/torch_long_press_power_timeout_title"
             android:entries="@array/torch_long_press_power_timeout_entries"
@@ -124,17 +130,20 @@
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="home_wake_screen"
+            android:icon="@drawable/ic_wake"
             android:title="@string/button_wake_title"
             android:defaultValue="true" />
 
         <SwitchPreference
             android:key="home_answer_call"
+            android:icon="@drawable/ic_call_options"
             android:title="@string/home_answer_call_title"
             android:summary="@string/home_answer_call_summary"
             android:persistent="false"/>
 
         <ListPreference
             android:key="hardware_keys_home_long_press"
+            android:icon="@drawable/ic_single_tap"
             android:dialogTitle="@string/hardware_keys_long_press_title"
             android:title="@string/hardware_keys_long_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -143,6 +152,7 @@
 
         <ListPreference
             android:key="hardware_keys_home_double_tap"
+            android:icon="@drawable/ic_double_tap"
             android:dialogTitle="@string/hardware_keys_double_tap_title"
             android:title="@string/hardware_keys_double_tap_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -157,11 +167,13 @@
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="back_wake_screen"
+            android:icon="@drawable/ic_wake"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
 
         <ListPreference
             android:key="hardware_keys_back_long_press"
+            android:icon="@drawable/ic_single_tap"
             android:dialogTitle="@string/hardware_keys_long_press_title"
             android:title="@string/hardware_keys_long_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -175,11 +187,13 @@
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="menu_wake_screen"
+            android:icon="@drawable/ic_wake"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
 
         <ListPreference
             android:key="hardware_keys_menu_press"
+            android:icon="@drawable/ic_single_tap"
             android:dialogTitle="@string/hardware_keys_short_press_title"
             android:title="@string/hardware_keys_short_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -188,6 +202,7 @@
 
         <ListPreference
             android:key="hardware_keys_menu_long_press"
+            android:icon="@drawable/ic_single_tap"
             android:dialogTitle="@string/hardware_keys_long_press_title"
             android:title="@string/hardware_keys_long_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -202,11 +217,13 @@
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="assist_wake_screen"
+            android:icon="@drawable/ic_wake"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
 
         <ListPreference
             android:key="hardware_keys_assist_press"
+            android:icon="@drawable/ic_single_tap"
             android:dialogTitle="@string/hardware_keys_short_press_title"
             android:title="@string/hardware_keys_short_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -215,6 +232,7 @@
 
         <ListPreference
             android:key="hardware_keys_assist_long_press"
+            android:icon="@drawable/ic_single_tap"
             android:dialogTitle="@string/hardware_keys_long_press_title"
             android:title="@string/hardware_keys_long_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -229,11 +247,13 @@
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="app_switch_wake_screen"
+            android:icon="@drawable/ic_wake"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
 
         <ListPreference
             android:key="hardware_keys_app_switch_press"
+            android:icon="@drawable/ic_single_tap"
             android:dialogTitle="@string/hardware_keys_short_press_title"
             android:title="@string/hardware_keys_short_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -242,6 +262,7 @@
 
         <ListPreference
             android:key="hardware_keys_app_switch_long_press"
+            android:icon="@drawable/ic_single_tap"
             android:dialogTitle="@string/hardware_keys_long_press_title"
             android:title="@string/hardware_keys_long_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -256,17 +277,20 @@
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="camera_wake_screen"
+            android:icon="@drawable/ic_wake"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="camera_sleep_on_release"
+            android:icon="@drawable/ic_camera_rear"
             android:title="@string/camera_sleep_on_release_title"
             android:summary="@string/camera_sleep_on_release_summary"
             android:defaultValue="false" />
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="camera_launch"
+            android:icon="@drawable/ic_camera"
             android:title="@string/camera_launch_title"
             android:summary="@string/camera_launch_summary"
             android:defaultValue="false" />
@@ -279,29 +303,34 @@
 
         <Preference
             android:key="vol_steps"
+            android:icon="@drawable/ic_settings_sound"
             android:title="@string/volume_steps_title"
             android:summary="@string/volume_steps_summary"
             android:fragment="com.blissroms.blissify.fragments.buttons.VolumeSteps" />
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="volume_wake_screen"
+            android:icon="@drawable/ic_wake"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="volume_answer_call"
+            android:icon="@drawable/ic_answer_call"
             android:title="@string/volume_answer_call_title"
             android:summary="@string/volume_answer_call_summary"
             android:defaultValue="false" />
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="volbtn_music_controls"
+            android:icon="@drawable/ic_music"
             android:title="@string/volbtn_music_controls_title"
             android:summary="@string/volbtn_music_controls_summary"
             android:defaultValue="true" />
 
         <ListPreference
             android:key="volume_key_cursor_control"
+            android:icon="@drawable/ic_cursor"
             android:dialogTitle="@string/volbtn_cursor_control_title"
             android:title="@string/volbtn_cursor_control_title"
             android:entries="@array/volbtn_cursor_control_entries"
@@ -310,6 +339,7 @@
 
         <SwitchPreference
             android:key="swap_volume_buttons"
+            android:icon="@drawable/ic_rotation"
             android:title="@string/swap_volume_buttons_title"
             android:summary="@string/swap_volume_buttons_summary" />
 
@@ -325,6 +355,7 @@
 
         <lineageos.preference.RemotePreference
             android:key="additional_buttons"
+            android:icon="@drawable/ic_extra_buttons"
             android:title="@string/additional_buttons_title"
             lineage:requiresAction="org.lineageos.settings.device.ADDITIONAL_BUTTONS_SETTINGS">
             <intent
