--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -15,7 +15,6 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:lineage="http://schemas.android.com/apk/res/lineageos.platform"
-    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:key="lockscreen_settings"
     android:title="@string/blissify_lockscreen_title">
 
@@ -24,20 +23,38 @@
         android:key="bliss_header"
         android:layout="@layout/lockscreen_header" />
 
+    <PreferenceCategory
+        android:key="lockscreen_shortcuts_category"
+        android:title="@string/lockscreen_shortcuts_category" >
+
     <Preference
          android:title="@string/lockscreen_shortcuts_title"
          android:summary="@string/lockscreen_shortcuts_summary">
         <intent android:action="com.android.settings.action.LOCK_SCREEN_TUNER" />
     </Preference>
 
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="lockscreen_charging_category"
+        android:title="@string/lockscreen_charging_category" >
+
     <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="lockscreen_battery_info"
+        android:icon="@drawable/ic_battery"
         android:title="@string/lockscreen_battery_info_title"
         android:summary="@string/lockscreen_battery_info_summary"
         android:defaultValue="true" />
 
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="lockscreen_wake_category"
+        android:title="@string/lockscreen_wake_category" >
+
     <lineageos.preference.LineageGlobalSettingSwitchPreference
         android:key="wake_when_plugged_or_unplugged"
+        android:icon="@drawable/ic_wake"
         android:title="@string/wake_when_plugged_or_unplugged_title"
         android:summary="@string/wake_when_plugged_or_unplugged_summary"
         android:defaultValue="@*android:bool/config_unplugTurnsOnScreen" />
@@ -45,39 +62,53 @@
     <!-- Prevent accidental wake-up -->
     <lineageos.preference.LineageSystemSettingSwitchPreference
         android:key="proximity_on_wake"
+        android:icon="@drawable/ic_wake"
         android:title="@string/proximity_wake_title"
         android:summary="@string/proximity_wake_summary"
         android:defaultValue="false"
         lineage:requiresConfig="@*lineageos.platform:bool/config_proximityCheckOnWake" />
 
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="fp_unlock_keystore"
+        android:icon="@drawable/ic_fp"
+        android:title="@string/fp_unlock_keystore_title"
+        android:summary="@string/fp_unlock_keystore_summary"
+        android:defaultValue="false" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="lockscreen_media_category"
+        android:title="@string/lockscreen_media_category" >
+
+    <lineageos.preference.LineageSecureSettingSwitchPreference
+        android:key="lockscreen_visualizer"
+        android:icon="@drawable/ic_visualizer"
+        android:title="@string/lockscreen_visualizer_title"
+        android:defaultValue="true" />
+
     <Preference
         android:key="lockscreen_visualizer"
+        android:icon="@drawable/ic_visualizer"
         android:title="@string/music_visualizer_title"
         android:summary="@string/music_visualizer_summary"
         android:fragment="com.blissroms.blissify.fragments.lockscreen.LockScreenVisualizer" />
 
     <lineageos.preference.LineageSecureSettingSwitchPreference
         android:key="lockscreen_media_metadata"
+        android:icon="@drawable/ic_movie"
         android:title="@string/lockscreen_media_art_title"
         android:defaultValue="true" />
 
     <com.bliss.support.preferences.CustomSeekBarPreference
         android:key="lockscreen_media_blur"
+        android:icon="@drawable/ic_movie"
         android:title="@string/lockscreen_media_blur_title"
         android:summary="@string/lockscreen_media_blur_summary"
         android:max="2500"
         settings:min="1"
         android:persistent="false" />
 
-    <lineageos.preference.LineageSecureSettingSwitchPreference
-        android:key="lockscreen_visualizer"
-        android:title="@string/lockscreen_visualizer_title"
-        android:defaultValue="true" />
-
-    <com.bliss.support.preferences.SystemSettingSwitchPreference
-        android:key="fp_unlock_keystore"
-        android:title="@string/fp_unlock_keystore_title"
-        android:summary="@string/fp_unlock_keystore_summary"
-        android:defaultValue="false" />
+    </PreferenceCategory>
 
 </PreferenceScreen>
