--- a/res/xml/blissify_qs.xml
+++ b/res/xml/blissify_qs.xml
@@ -25,12 +25,14 @@
 
         <com.bliss.support.preferences.SecureSettingSwitchPreference
             android:key="quick_settings_vibrate"
+            android:icon="@drawable/ic_vibrate"
             android:title="@string/quick_settings_vibrate_title"
             android:summary="@string/quick_settings_vibrate_summary"
             android:defaultValue="false"/>
 
         <lineageos.preference.LineageSecureSettingListPreference
             android:key="qs_show_brightness_slider"
+            android:icon="@drawable/ic_brightness"
             android:title="@string/qs_brightness_slider_title"
             android:entries="@array/qs_brightness_slider_entries"
             android:entryValues="@array/qs_brightness_slider_values"
@@ -38,6 +40,7 @@
 
         <lineageos.preference.LineageSecureSettingSwitchPreference
             android:key="qs_show_auto_brightness"
+            android:icon="@drawable/ic_brightness_auto"
             android:title="@string/brightness_icon_title"
             android:summary="@string/brightness_icon_summary"
             lineage:requiresConfig="@*android:bool/config_automatic_brightness_available"
@@ -46,6 +49,7 @@
         <!-- QS clock -->
         <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="show_qs_clock"
+            android:icon="@drawable/ic_clock"
             android:title="@string/qs_clock_title"
             android:summary="@string/qs_clock_summary"
             android:defaultValue="true" />
