--- a/res/xml/blissify_statusbar.xml
+++ b/res/xml/blissify_statusbar.xml
@@ -26,6 +26,7 @@
 
     <lineageos.preference.LineageSystemSettingListPreference
         android:key="qs_quick_pulldown"
+        android:icon="@drawable/ic_arrow_down"
         android:title="@string/status_bar_quick_qs_pulldown_title"
         android:entries="@array/status_bar_quick_qs_pulldown_entries"
         android:entryValues="@array/status_bar_quick_qs_pulldown_values"
@@ -39,12 +40,14 @@
 
         <PreferenceScreen
             android:key="network_traffic_settings"
+            android:icon="@drawable/ic_traffic"
             android:title="@string/network_traffic_settings_title"
             android:summary="@string/network_traffic_settings_summary"
             android:fragment="com.blissroms.blissify.fragments.statusbar.NetworkTrafficSettings" />
 
         <Preference
             android:key="batterybar_settings"
+            android:icon="@drawable/ic_battery"
             android:title="@string/battery_bar_title"
             android:summary="@string/battery_bar_summary"
             android:fragment="com.blissroms.blissify.fragments.statusbar.BatterybarSettings" />
@@ -62,6 +65,7 @@
 
         <PreferenceScreen
             android:key="status_bar_icons"
+            android:icon="@drawable/ic_shapes"
             android:title="@string/status_bar_system_icons_title"
             android:summary="@string/status_bar_system_icons_summary">
             <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
@@ -70,6 +74,7 @@
       <!-- Breathing Notifications -->
       <Preference
           android:key="advanced_icons"
+            android:icon="@drawable/ic_shapes"
           android:title="@string/statusbar_advanced_icons"
           android:fragment="com.blissroms.blissify.fragments.statusbar.AdvancedStatusbar" />
 
@@ -81,6 +86,7 @@
 
         <lineageos.preference.LineageSystemSettingListPreference
             android:key="status_bar_clock"
+            android:icon="@drawable/ic_clock"
             android:title="@string/status_bar_clock_position_title"
             android:summary="%s"
             android:dialogTitle="@string/status_bar_clock_position_title"
@@ -90,6 +96,7 @@
 
         <Preference
             android:key="clock"
+            android:icon="@drawable/ic_clock"
             android:title="@string/status_bar_clock_title"
             android:summary="@string/status_bar_clock_summary"
             android:fragment="com.blissroms.blissify.fragments.statusbar.Clock" />
@@ -102,6 +109,7 @@
 
         <lineageos.preference.LineageSystemSettingListPreference
             android:key="status_bar_battery_style"
+            android:icon="@drawable/ic_battery"
             android:title="@string/status_bar_battery_style_title"
             android:summary="%s"
             android:dialogTitle="@string/status_bar_battery_style_title"
@@ -111,6 +119,7 @@
 
         <lineageos.preference.LineageSystemSettingListPreference
             android:key="status_bar_show_battery_percent"
+            android:icon="@drawable/ic_percent"
             android:title="@string/status_bar_battery_percentage_title"
             android:summary="%s"
             android:dialogTitle="@string/status_bar_battery_percentage_title"
@@ -125,12 +134,14 @@
 
         <lineageos.preference.LineageSecureSettingSwitchPreference
             android:key="qs_show_brightness_slider"
+            android:icon="@drawable/ic_brightness"
             android:title="@string/status_bar_brightness_slider_title"
             android:summary="@string/status_bar_brightness_slider_summary"
             android:defaultValue="true" />
 
         <lineageos.preference.LineageSecureSettingSwitchPreference
             android:key="qs_show_auto_brightness"
+            android:icon="@drawable/ic_brightness_auto"
             android:title="@string/status_bar_brightness_slider_auto_title"
             android:summary="@string/status_bar_brightness_slider_auto_summary"
             android:dependency="qs_show_brightness_slider"
@@ -139,6 +150,7 @@
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="status_bar_brightness_control"
+            android:icon="@drawable/ic_brightness"
             android:title="@string/status_bar_toggle_brightness"
             android:summary="@string/status_bar_toggle_brightness_summary"
             android:defaultValue="false" />
