--- a/res/xml/lockscreen_visualizer.xml
+++ b/res/xml/lockscreen_visualizer.xml
@@ -23,6 +23,13 @@
         android:defaultValue="true" />
 
     <com.bliss.support.preferences.SecureSettingSwitchPreference
+       android:key="lockscreen_visualizer_smoothing_enabled"
+        android:title="@string/lockscreen_visualizer_smoothing_title"
+        android:summary="@string/lockscreen_visualizer_smoothing_summary"
+        android:defaultValue="false"
+        android:dependency="lockscreen_visualizer_enabled"/>
+
+    <com.bliss.support.preferences.SecureSettingSwitchPreference
        android:key="lockscreen_visualizer_autocolor"
         android:title="@string/lockscreen_autocolor_title"
         android:summary="@string/lockscreen_autocolor_summary"
