Blissify: add option to display Logo in QS Panel too [2/2]
Change-Id: I778736b7f378c070525546744bd574819143368a

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -626,6 +626,8 @@
     <string name="status_bar_bliss_logo_style">Logo style</string>
     <string name="status_bar_logo_position_right">Right</string>
     <string name="status_bar_logo_position_left">Left</string>
+    <string name="status_bar_logo_position_right_quick">Right with QS Panel</string>
+    <string name="status_bar_logo_position_left_quick">Left with QS Panel</string>
     <string name="status_bar_logo_style_bliss">bliss</string>
     <string name="status_bar_logo_style_android">Android</string>
     <string name="status_bar_logo_style_apple">Apple</string>
