Add battery styles and customizations for Android 10 [2/2]
Change-Id: Ibf9d340177aa3f81ba36b3e7e55532efc9784d32
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: rohan <purohit.rohan@gmail.com>

--- a/res/xml/blissify_qs.xml
+++ b/res/xml/blissify_qs.xml
@@ -23,6 +23,14 @@
         android:key="bliss_header"
         android:layout="@layout/qs_header" />
 
+        <!-- Battery mode -->
+        <com.bliss.support.preferences.SystemSettingListPreference
+            android:key="qs_battery_mode"
+            android:title="@string/battery_percentage_title"
+            android:entries="@array/qs_battery_mode_entries"
+            android:entryValues="@array/qs_battery_mode_values"
+            android:defaultValue="1" />
+
         <com.bliss.support.preferences.SecureSettingSwitchPreference
             android:key="quick_settings_vibrate"
             android:title="@string/quick_settings_vibrate_title"
