--- a/res/xml/blissify_statusbar.xml
+++ b/res/xml/blissify_statusbar.xml
@@ -104,7 +104,7 @@
         android:key="status_bar_battery_key"
         android:title="@string/status_bar_battery_title">
 
-        <lineageos.preference.LineageSystemSettingListPreference
+        <com.bliss.support.preferences.SystemSettingListPreference
             android:key="status_bar_battery_style"
             android:title="@string/status_bar_battery_style_title"
             android:summary="%s"
@@ -113,14 +113,18 @@
             android:entryValues="@array/status_bar_battery_style_values"
             android:defaultValue="0" />
 
-        <lineageos.preference.LineageSystemSettingListPreference
+        <com.bliss.support.preferences.SystemSettingListPreference
             android:key="status_bar_show_battery_percent"
-            android:title="@string/status_bar_battery_percentage_title"
-            android:summary="%s"
-            android:dialogTitle="@string/status_bar_battery_percentage_title"
+            android:title="@string/battery_percentage_title"
             android:entries="@array/status_bar_battery_percentage_entries"
             android:entryValues="@array/status_bar_battery_percentage_values"
             android:defaultValue="0" />
+
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="status_bar_battery_text_charging"
+            android:title="@string/status_bar_battery_text_charging_title"
+            android:summary="@string/status_bar_battery_text_charging_summary"
+            android:defaultValue="true" />
 
     </PreferenceCategory>
 
