Add QS System Info [2/2]
Change-Id: Id21d741d9a82d6fab03ef529f54964bb4c3bfd91
Signed-off-by: rohan <purohit.rohan@gmail.com>

--- a/res/xml/blissify_qs.xml
+++ b/res/xml/blissify_qs.xml
@@ -53,6 +53,14 @@
         android:summary="@string/qs_clock_summary"
         android:defaultValue="true" />
 
+    <com.bliss.support.preferences.SystemSettingListPreference
+        android:key="qs_system_info"
+        android:title="@string/qs_system_info_title"
+        android:entries="@array/qs_system_info_entries"
+        android:entryValues="@array/qs_system_info_values"
+        android:defaultValue="0"
+        android:summary="%s" />
+
     </PreferenceCategory>
 
     <!-- QS brightness -->
