--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1133,4 +1133,12 @@
     <string name="lockscreen_date_hide_title">Hide Date Widget</string>
     <string name="lockscreen_date_hide_summary">Enable to Hide Date and other items, \n Music info on Ambient screen will be hidden as well</string>
 
+    <!-- QS SystemInfo -->
+    <string name="qs_system_info_title">System Info</string>
+    <string name="qs_system_info_off">Off</string>
+    <string name="qs_system_info_cpu_temp">CPU temperature</string>
+    <string name="qs_system_info_battery_temp">Battery temperature</string>
+    <string name="qs_system_info_gpu_clock">GPU frequency</string>
+    <string name="qs_system_info_gpu_busy">GPU utilization</string>
+
 </resources>
