--- a/res/xml/blissify.xml
+++ b/res/xml/blissify.xml
@@ -36,7 +36,7 @@
       <Preference
           android:key="animation_category"
           android:title="@string/blissify_animation_title"
-          android:fragment="com.blissroms.blissify.fragments.animation.Animation"
+          android:fragment="com.blissroms.blissify.fragments.animation.Animations"
           android:icon="@drawable/ic_blissify_animation"/>
 
       <!-- Buttons -->
