--- a/res/xml/blissify_animation.xml
+++ b/res/xml/blissify_animation.xml
@@ -1,137 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2019 BlissRoms Project
-
+<!--
+     Copyright (C) 2016-2019 crDroid Android Project
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
-
           http://www.apache.org/licenses/LICENSE-2.0
-
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<PreferenceScreen 
+<PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
-    android:title="@string/blissify_animation_title" >
+    android:title="@string/animation_title"
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
-    <!-- Bliss Header -->
-    <Preference 
-        android:key="bliss_header"
-        android:layout="@layout/animation_header" />
+    <PreferenceScreen
+        android:key="system_animation"
+        android:title="@string/system_animation_title"
+        android:summary="@string/system_animation_summary"
+        android:fragment="com.blissroms.blissify.fragments.animation.AnimationControls" />
 
-    <PreferenceCategory
-        android:key="system_animations"
-        android:title="@string/system_animation_category"/>
+    <ListPreference
+        android:key="listview_animation"
+        android:dialogTitle="@string/listview_animation_title"
+        android:title="@string/listview_animation_title"
+        android:entries="@array/listview_animation_entries"
+        android:entryValues="@array/listview_animation_values"
+        android:defaultValue="0" />
 
-        <ListPreference
-            android:key="activity_open"
-            android:title="@string/activity_open_title" />
+    <ListPreference
+        android:key="listview_interpolator"
+        android:dialogTitle="@string/listview_interpolator_title"
+        android:title="@string/listview_interpolator_title"
+        android:entries="@array/listview_interpolator_entries"
+        android:entryValues="@array/listview_interpolator_values"
+        android:defaultValue="0" />
 
-        <ListPreference
-            android:key="activity_close"
-            android:title="@string/activity_close_title" />
+    <ListPreference
+        android:key="toast_animation"
+        android:title="@string/toast_animation_title"
+        android:entries="@array/toast_animation_entries"
+        android:entryValues="@array/toast_animation_values"
+        android:defaultValue="1" />
 
-        <ListPreference
-            android:key="listview_animation"
-            android:dialogTitle="@string/listview_animation_title"
-            android:title="@string/listview_animation_title"
-            android:entries="@array/listview_animation_entries"
-            android:entryValues="@array/listview_animation_values"
-            android:defaultValue="0" />
+    <com.bliss.support.preferences.SystemSettingListPreference
+        android:key="anim_tile_style"
+        android:dialogTitle="@string/qs_tile_animation_style_title"
+        android:title="@string/qs_tile_animation_style_title"
+        android:entries="@array/qs_tile_animation_style_entries"
+        android:entryValues="@array/qs_tile_animation_style_values"
+        android:defaultValue="0" />
 
-        <ListPreference
-            android:key="listview_interpolator"
-            android:dialogTitle="@string/listview_interpolator_title"
-            android:title="@string/listview_interpolator_title"
-            android:entries="@array/listview_interpolator_entries"
-            android:entryValues="@array/listview_interpolator_values"
-            android:defaultValue="0" />
+    <com.bliss.support.preferences.SystemSettingListPreference
+        android:key="anim_tile_duration"
+        android:dialogTitle="@string/qs_tile_animation_duration_title"
+        android:title="@string/qs_tile_animation_duration_title"
+        android:entries="@array/qs_tile_animation_duration_entries"
+        android:entryValues="@array/qs_tile_animation_duration_values"
+        android:defaultValue="2000" />
 
-        <ListPreference
-            android:key="task_open"
-            android:title="@string/task_open_title" />
+    <com.bliss.support.preferences.SystemSettingListPreference
+        android:key="anim_tile_interpolator"
+        android:dialogTitle="@string/qs_tile_animation_interpolator_title"
+        android:title="@string/qs_tile_animation_interpolator_title"
+        android:entries="@array/qs_tile_animation_interpolator_entries"
+        android:entryValues="@array/qs_tile_animation_interpolator_values"
+        android:defaultValue="0" />
 
-        <ListPreference
-            android:key="task_open_behind"
-            android:title="@string/task_open_behind_title" />
+    <ListPreference
+        android:key="pref_scrollingcache"
+        android:dialogTitle="@string/pref_scrollingcache_title"
+        android:title="@string/pref_scrollingcache_title"
+        android:entries="@array/entries_scrollingcache"
+        android:entryValues="@array/values_scrollingcache"
+        android:defaultValue="1" />
 
-        <ListPreference
-            android:key="task_close"
-            android:title="@string/task_close_title" />
-
-        <ListPreference
-            android:key="task_move_to_front"
-            android:title="@string/task_move_to_front_title" />
-
-        <ListPreference
-            android:key="task_move_to_back"
-            android:title="@string/task_move_to_back_title" />
-
-        <ListPreference
-            android:key="wallpaper_open"
-            android:title="@string/wallpaper_open_title" />
-
-        <ListPreference
-            android:key="wallpaper_close"
-            android:title="@string/wallpaper_close_title" />
-
-        <ListPreference
-            android:key="wallpaper_intra_open"
-            android:title="@string/wallpaper_intra_open_title" />
-
-        <ListPreference
-            android:key="wallpaper_intra_close"
-            android:title="@string/wallpaper_intra_close_title" />
-
-        <ListPreference
-            android:key="toast_animation"
-            android:title="@string/toast_animation_title"
-            android:entries="@array/toast_animation_entries"
-            android:entryValues="@array/toast_animation_values"
-            android:persistent="false" />
-
-        <SwitchPreference
-            android:key="animation_no_override"
-            android:title="@string/title_animation_no_override"
-            android:summary="@string/summary_animation_no_override" />
-
-        <ListPreference
-            android:key="pref_scrollingcache"
-            android:dialogTitle="@string/pref_scrollingcache_title"
-            android:title="@string/pref_scrollingcache_title"
-            android:summary="@string/pref_scrollingcache_summary"
-            android:entries="@array/entries_scrollingcache"
-            android:entryValues="@array/values_scrollingcache" />
-
-    <PreferenceCategory
-        android:key="qs_animations"
-        android:title="@string/qs_animation_title"/>
-
-        <ListPreference
-            android:key="qs_tile_animation_style"
-            android:title="@string/qs_tile_animation_style_title"
-            android:entries="@array/qs_tile_animation_style_entries"
-            android:entryValues="@array/qs_tile_animation_style_values"
-            android:persistent="false" />
-
-        <ListPreference
-            android:key="qs_tile_animation_duration"
-            android:title="@string/qs_tile_animation_duration_title"
-            android:entries="@array/qs_tile_animation_duration_entries"
-            android:entryValues="@array/qs_tile_animation_duration_values"
-            android:persistent="false" />
-            
-        <ListPreference
-            android:key="qs_tile_animation_interpolator"
-            android:title="@string/qs_tile_animation_interpolator_title"
-            android:entries="@array/qs_tile_animation_interpolator_entries"
-            android:entryValues="@array/qs_tile_animation_interpolator_values"
-            android:persistent="false" />
-        
     <ListPreference
         android:key="screen_off_animation"
         android:title="@string/screen_off_animation_title"
@@ -139,5 +84,5 @@
         android:entryValues="@array/screen_off_animation_values"
         android:persistent="false"
         android:defaultValue="0" />
-        
+
 </PreferenceScreen>
