Add ability to toggle bluetooth battery level [2/2]
Change-Id: I2f69d3ab5f412871ef26c4c89bc717c7e9a8bc83

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -531,5 +531,9 @@
     <string name="lockscreen_albumart_filter_blur">Blur</string>
     <string name="lockscreen_albumart_filter_grayblur">Grayscale and blurred</string>
 
+    <!-- Bluetooth status -->
+    <string name="bluetooth_battery_title">Bluetooth battery status</string>
+    <string name="bluetooth_battery_summary">Display battery status for the connected bluetooth device, if available</string>
+
 </resources>
 
