--- a/res/xml/statusbar_advanced_icons.xml
+++ b/res/xml/statusbar_advanced_icons.xml
@@ -16,6 +16,12 @@
     android:title="@string/statusbar_advanced_icons">
 
         <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="bluetooth_show_battery"
+            android:title="@string/bluetooth_battery_title"
+            android:summary="@string/bluetooth_battery_summary"
+            android:defaultValue="true"/>
+
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="show_volte_icon"
             android:icon="@drawable/ic_volte"
             android:title="@string/volte_icon_title"
