Blissify: Add Pocket judge toggle
Change-Id: Ibeba3980e0a4b4a2a9dd2e36dd0122bbae77495e
Signed-off-by: rohan <purohit.rohan@gmail.com>

--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -163,6 +163,12 @@
         android:icon="@drawable/ic_ui_options"
         android:title="@string/lockscreen_items_category" >
 
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="pocket_judge"
+        android:title="@string/pocket_judge_title"
+        android:summary="@string/pocket_judge_summary"
+        android:defaultValue="false" />
+
     <com.bliss.support.preferences.GlobalSettingSwitchPreference
         android:key="lockscreen_enable_qs"
         android:title="@string/lockscreen_enable_qs_title"
