--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1601,4 +1601,8 @@
     <string name="qs_label_tint_off">Default</string>
     <string name="qs_label_tint_accent">Accent Color Tint</string>
     <string name="qs_label_tint_gradient">Gradient Color Tint</string>
+
+    <!-- Pocket judge -->
+    <string name="pocket_judge_title">Pocket detection</string>
+    <string name="pocket_judge_summary">Block screen and button inputs when device is in pocket</string>
 </resources>
