Separate double tap to sleep on lockscreen [2/2]
Change-Id: I7e6a814a9925b8a19e74177c445d37cda6ab4bd6

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -562,5 +562,9 @@
     <string name="battery_percentage_inside">Enabled (inside icon)</string>
     <string name="battery_percentage_estimate">Enabled (estimate)</string>
 
+    <!-- Lockscreen tap-to sleep -->
+    <string name="double_tap_sleep_anywhere_title">Tap to sleep</string>
+    <string name="double_tap_sleep_anywhere_summary">Double-tap anywhere on the lockscreen to put device asleep</string>
+
 </resources>
 
