Blissify: Add Notification Icon
Change-Id: I13af27ffdf180fd7ca99abefb9ac284686df0ad9
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/xml/blissify.xml
+++ b/res/xml/blissify.xml
@@ -64,7 +64,8 @@
       <Preference
           android:key="notifications_category"
           android:title="@string/blissify_notifications_title"
-          android:fragment="com.blissroms.blissify.fragments.notifications.Notifications"/>
+          android:fragment="com.blissroms.blissify.fragments.notifications.Notifications"
+          android:icon="@drawable/ic_blissify_notification"/>
 
       <!-- Misc -->
       <Preference
