Blissify: Add Notification Icon
Change-Id: I13af27ffdf180fd7ca99abefb9ac284686df0ad9
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/xml/blissify_notifications.xml
+++ b/res/xml/blissify_notifications.xml
@@ -26,7 +26,7 @@
         android:defaultValue="true" />
 
   <PreferenceCategory
-        android:title="@string/breathing_notifications_category" />
+        android:title="@string/breathing_notifications_category" >
 
     <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="sms_breath"
@@ -45,6 +45,7 @@
         android:title="@string/voicemail_breath_title"
         android:summary="@string/voicemail_breath_summary"
         android:persistent="false"/>
-
+    
+    </PreferenceCategory>
 </PreferenceScreen>
 
