Fingerprint error vibration [2/2]
Change-Id: Icd78ce5651bd834ecb986e5d2f55bf8a28a0f898
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: rohan <purohit.rohan@gmail.com>

--- a/res/xml/blissify_misc.xml
+++ b/res/xml/blissify_misc.xml
@@ -43,6 +43,12 @@
         android:summary="@string/fprint_sucess_vib_summary"
         android:persistent="false" />
 
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="fp_error_vibrate"
+        android:title="@string/fp_error_vibrate_title"
+        android:summary="@string/fp_error_vibrate_summary"
+        android:defaultValue="true" />
+
     <PreferenceCategory
         android:key="rounded_corners_category"
         android:title="@string/corners_title" >
