[2/3] Blissify: Custom quick settings tile columns
Change-Id: Ied14d0ba5d3918142bfd5950155acb0608c89e7f
Signed-off-by: rohan <purohit.rohan@gmail.com>

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -721,4 +721,7 @@
     <string name="notification_guts_kill_app_button_title">Kill app button</string>
     <string name="notification_guts_kill_app_button_summary">Show a kill app button in the notification\'s longpress menu</string>
 
+    <!-- QS coloumns -->
+    <string name="status_bar_qs_tile_columns_title">Quick settings tile columns</string>
+
 </resources>
