[2/3] Blissify: Custom quick settings tile columns
Change-Id: Ied14d0ba5d3918142bfd5950155acb0608c89e7f
Signed-off-by: rohan <purohit.rohan@gmail.com>

--- a/res/xml/blissify_qs.xml
+++ b/res/xml/blissify_qs.xml
@@ -23,6 +23,13 @@
         android:key="bliss_header"
         android:layout="@layout/qs_header" />
 
+        <lineageos.preference.LineageSystemSettingListPreference
+            android:key="qs_tile_columns"
+            android:title="@string/qs_tile_columns_title"
+            android:entries="@array/qs_tile_columns_entries"
+            android:entryValues="@array/qs_tile_columns_values"
+            android:defaultValue="3" />
+
         <!-- Battery mode -->
         <com.bliss.support.preferences.SystemSettingListPreference
             android:key="qs_battery_mode"
