--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -799,5 +799,20 @@
         <item>900000</item>
         <item>1200000</item>
     </string-array>
-    
+
+    <!-- Quick settings tile columns -->
+    <string-array name="qs_tile_columns_entries" translatable="false">
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+    </string-array>
+
+    <string-array name="qs_tile_columns_values" translatable="false">
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+    </string-array>
+
 </resources>
