--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1555,4 +1555,18 @@
     <string name="text_clock_left_right">Left-Right</string>
     <string name="text_clock_right_left">Right-Left</string>
     <string name="text_clock_padding">Edge Padding</string>
+
+    <!-- Screen state service -->
+    <string name="screen_state_toggles_title">Suspend Actions</string>
+    <string name="screen_state_toggles_summary">Actions executed when the screen is turned off</string>
+    <string name="screen_state_toggles_mobile_title">Mobile Network</string>
+    <string name="screen_state_toggles_location_title">Location</string>
+    <string name="screen_state_toggles_twog">Switch to 2G</string>
+    <string name="screen_state_toggles_twog_summary">Network mode will be switched to 2G on screen off</string>
+    <string name="screen_state_toggles_gps">Disable GPS</string>
+    <string name="screen_state_toggles_gps_summary">GPS based location service will be disabled on screen off</string>
+    <string name="screen_state_toggles_mobile_data">Disable mobile data</string>
+    <string name="screen_state_toggles_mobile_data_summary">Mobile data will be disabled on screen off</string>
+    <string name="screen_state_off_delay_title">Screen-off actions delay</string>
+    <string name="screen_state_on_delay_title">Screen-on actions delay</string>
 </resources>
