Blissify: integrate ThemePicker
Change-Id: Id02b7c75e92c7ec6bb0f4fb03c0f0ea0c2048e21
Signed-off-by: Josh Fox (XlxFoXxlX) <joshfox87@gmail.com>

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1245,4 +1245,7 @@
 
     <!-- Themes -->
     <string name="aosp_themeing_title">Aosp Themeing</string>
+    <string name="theming_title">Styles &amp; Wallpapers</string>
+    <string name="theme_select_title">Themes</string>
+    <string name="theme_select_summary">Browse and select installed themes</string>
 </resources>
