--- a/res/xml/blissify_themes.xml
+++ b/res/xml/blissify_themes.xml
@@ -22,6 +22,22 @@
         android:layout="@layout/themes_header" />
 
     <PreferenceCategory
+        android:key="category_theming"
+        android:title="@string/theming_title">
+
+        <Preference
+            android:key="theme_select_activity"
+            android:title="@string/theme_select_title"
+            android:summary="@string/theme_select_summary"
+            android:persistent="false" >
+            <intent android:action="android.intent.action.MAIN"
+                    android:targetPackage="com.android.customization"
+                    android:targetClass="com.android.customization.picker.CustomizationPickerActivity" />
+        </Preference>
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:key="aosp_themeing"
         android:title="@string/aosp_themeing_title">
 
