Blissify: Add toggle to disable charging animation [2/2]
Change-Id: I10d794605ca1890a90ffd2397e2aa15fb6efb389

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -387,6 +387,9 @@
     <string name="lockscreen_charging_category">Lockscreen Charging</string>
     <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
     <string name="lockscreen_battery_info_summary">Display negociated charger max current and voltage and battery temperature on lockscreen while charging</string>
+    <!-- Wireless charging animation -->
+    <string name="wireless_charging_animation_title">Charging animation</string>
+    <string name="wireless_charging_animation_summary">Display an animation when the device is plugged in</string>
 
     <!-- setting: show CPU info-->
     <string name="show_cpu_info">Show CPU info</string>
