--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -46,6 +46,14 @@
         android:title="@string/lockscreen_battery_info_title"
         android:summary="@string/lockscreen_battery_info_summary"
         android:defaultValue="true" />
+
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="wireless_charging_animation"
+        android:icon="@drawable/ic_blissify_misc"
+        android:title="@string/wireless_charging_animation_title"
+        android:summary="@string/wireless_charging_animation_summary"
+        android:defaultValue="false" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
